target blank vulnerability

--- a/wwwroot/_themes/main/partials/footer.html
+++ b/wwwroot/_themes/main/partials/footer.html
@@ -4,7 +4,7 @@
 			<a href="{{ _site_url }}/faq">Frequently Asked Questions</a>
 			{{ nav from="/sitemap" }}<a href="{{ url }}">Sitemap</a>{{ /nav }}
 			<div class="show-small">
-				<a href="{{ globals:map_url}}" target="_blank">
+				<a href="{{ globals:map_url}}" target="_blank" rel="noopener noreferrer">
 					<div>{{ globals:address_line1 }}</div>
 					<div>{{ globals:address_line2 }}</div>
 				</a>
@@ -13,7 +13,7 @@
 			</div>
 		</div>
 		<div class="footer-group show-large">
-				<a href="{{ globals:map_url}}" target="_blank">
+				<a href="{{ globals:map_url}}" target="_blank" rel="noopener noreferrer">
 					<div>{{ globals:address_line1 }}</div>
 					<div>{{ globals:address_line2 }}</div>
 				</a>
@@ -22,10 +22,10 @@
 		</div>
 		<div class="footer-group signup">
 			<div>Sign up for email updates</div>
-			<form action="//lesliegarfield.us12.list-manage.com/subscribe/post?u=5645fb1229acab9604f9f450f&amp;id=8327ab2928" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate email-signup" target="_blank" novalidate>
+			<form action="//lesliegarfield.us12.list-manage.com/subscribe/post?u=5645fb1229acab9604f9f450f&amp;id=8327ab2928" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate email-signup" target="_blank" rel="noopener noreferrer" novalidate>
 			<div class="form-full">
 				<input type="email" value="" placeholder="Email" name="EMAIL" class="input required email" id="mce-EMAIL">
-				<input type="submit" value="Submit" name="subscribe" id="mc-embedded-subscribe" class="validate submit" target="_blank" novalidate>
+				<input type="submit" value="Submit" name="subscribe" id="mc-embedded-subscribe" class="validate submit" target="_blank" rel="noopener noreferrer" novalidate>
 		    <div style="position: absolute; left: -5000px;"><input type="text" name="b_5645fb1229acab9604f9f450f_8327ab2928" tabindex="-1" value=""></div>
 		   </div>
 				<div id="mce-responses" class="clear">
@@ -38,7 +38,7 @@
 
 		<div class="footer-group affiliate">
 			<div>Exclusive Affiliate of</div>
-			<a class="beauchamp" target="_blank" href="http://www.beauchamp.co.uk/en/"><img src="{{ theme:img src="beauchamp_footer.png" }}"></a>
+			<a class="beauchamp" target="_blank" rel="noopener noreferrer" href="http://www.beauchamp.co.uk/en/"><img src="{{ theme:img src="beauchamp_footer.png" }}"></a>
 		</div>
 
 	</div>
@@ -50,13 +50,13 @@
 		<a href="{{ _site_url }}/terms">Terms &amp; Conditions</a>
 		</div>
 		<div class="grid-6 social right-align footer">
-			<a href="{{ globals:facebook }}" target="_blank">
+			<a href="{{ globals:facebook }}" target="_blank" rel="noopener noreferrer">
 				<i class="fa fa-facebook"></i>
 			</a>
-			<a href="https://twitter.com/{{ globals:twitter }}" target="_blank">
+			<a href="https://twitter.com/{{ globals:twitter }}" target="_blank" rel="noopener noreferrer">
 				<i class="fa fa-twitter"></i>
 			</a>
-			<a href="https://instagram.com/{{ globals:instagram }}" target="_blank">
+			<a href="https://instagram.com/{{ globals:instagram }}" target="_blank" rel="noopener noreferrer">
 				<i class="fa fa-instagram"></i>
 			</a>
 		</div>
