--- a/wwwroot/_themes/main/partials/twitter.html
+++ b/wwwroot/_themes/main/partials/twitter.html
@@ -4,7 +4,7 @@
 
     {{ user }}
         <div class="follow" style="background-color: #CCCCCC">
-            <a target="_blank" href="https://twitter.com/{{ screen_name }}">
+            <a target="_blank" rel="noopener noreferrer" href="https://twitter.com/{{ screen_name }}">
                 <img src="{{ profile_image_url }}" alt="{{ screen_name }} on Twitter">
                 <span>Follow Leslie J. Garfield on Twitter</span>
             </a>
@@ -14,7 +14,7 @@
         <div class="tweet">
             <p class="tweet-text">"{{ text }}"</p>
             <p class="time">
-                <a target="_blank" class="tweet-url"href="{{ tweet_url }}">{{ created_at format="h:ia F jS, Y" }}</a>
+                <a target="_blank" rel="noopener noreferrer" class="tweet-url"href="{{ tweet_url }}">{{ created_at format="h:ia F jS, Y" }}</a>
             </p>
         </div>
     {{ /tweets }}
