--- a/wwwroot/_themes/main/templates/contact_mailchimp.html
+++ b/wwwroot/_themes/main/templates/contact_mailchimp.html
@@ -6,7 +6,7 @@
 			<h3>Sales Enquiries</h3>
 			<!-- Begin MailChimp Signup Form -->
 			<div id="mc_embed_signup">
-			<form action="//lesliegarfield.us12.list-manage.com/subscribe/post?u=5645fb1229acab9604f9f450f&amp;id=8327ab2928" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+			<form action="//lesliegarfield.us12.list-manage.com/subscribe/post?u=5645fb1229acab9604f9f450f&amp;id=8327ab2928" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" rel="noopener noreferrer" novalidate>
 
 			<input type="email" value="" placeholder="Email" name="EMAIL" class="input required email" id="mce-EMAIL">
 				<input type="text" value="" placeholder="First Name" name="FNAME" class="input " id="mce-FNAME">
