--- a/wwwroot/_themes/main/templates/reports.html
+++ b/wwwroot/_themes/main/templates/reports.html
@@ -5,7 +5,7 @@
 		<ul class="grid-constrained report-header">
 			{{ reports limit="6"}}
 				<li class="grid-3-constrained report">
-					<a target="_blank" href="{{ report }}" class="report-tile">
+					<a target="_blank" rel="noopener noreferrer" href="{{ report }}" class="report-tile">
 						<h4>{{ report_date }}</h4>
 						<h3>{{ report_title }}</h3>
 						<span>DOWNLOAD <i class="fa fa-angle-down"></i></span>
@@ -22,7 +22,7 @@
 			<ul style="display: none" class="grid-constrained">
 				{{ reports offset="6" }}
 					<li class="grid-3-constrained report">
-						<a target="_blank" href="{{ report }}" class="report-tile">
+						<a target="_blank" rel="noopener noreferrer" href="{{ report }}" class="report-tile">
 							<h4>{{ report_date }}</h4>
 							<h3>{{ report_title }}</h3>
 							<span>DOWNLOAD <i class="fa fa-angle-down"></i></span>
@@ -35,7 +35,7 @@
 <section class="bg-gray">
 	<div class="container reports signup">
 		<h2>Register</h2>
-		<form action="//lesliegarfield.us12.list-manage.com/subscribe/post?u=5645fb1229acab9604f9f450f&amp;id=3662d5b781" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+		<form action="//lesliegarfield.us12.list-manage.com/subscribe/post?u=5645fb1229acab9604f9f450f&amp;id=3662d5b781" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" rel="noopener noreferrer" novalidate>
     <div id="mc_embed_signup_scroll">
 <div style="position: relative">
 	<div class="form-group half">
