--- a/wwwroot/_themes/main/partials/property/downloads.html
+++ b/wwwroot/_themes/main/partials/property/downloads.html
@@ -2,13 +2,13 @@
 <div class="dotted"></div>
 <div class="agent property-downloads">
 	{{ if brochure }}
-	<a href="{{ brochure }}" target="_blank">
+	<a href="{{ brochure }}" target="_blank" rel="noopener noreferrer">
 		{{ theme:partial src="svg/download" }}
 		<span>Brochure</span>
 	</a>
 	{{ endif }}
 	{{ if floor_plans }}
-	<a href="{{ floor_plans }}" target="_blank">
+	<a href="{{ floor_plans }}" target="_blank" rel="noopener noreferrer">
 		{{ theme:partial src="svg/floorplans" }}
 		<span>Floorplans</span>
 	</a>
